endret farger og lagt til privacy police

--- a/public/index.html
+++ b/public/index.html
@@ -80,13 +80,13 @@
                 </div>
                 <div class="flex-col-2 center-content">
                     <div class="wrap">
-                        <p class="explain-text">Calc Fast is a quick and fun math game you can play on your Android phone.</p> 
-                        <p class="explain-text">Solve as many math calculations you can in 60 secons!</p>
+                        <p class="explain-text text-black">Calc Fast is a quick and fun math game you can play on your Android phone.</p> 
+                        <p class="explain-text text-black">Solve as many math calculations you can in 60 secons!</p>
                         <ul>
-                            <li class="explain-text">Addision</li>
-                            <li class="explain-text">Subtraction</li>
-                            <li class="explain-text">Multiplication</li>
-                            <li class="explain-text">Division</li>
+                            <li class="explain-text text-black">Addision</li>
+                            <li class="explain-text text-black">Subtraction</li>
+                            <li class="explain-text text-black">Multiplication</li>
+                            <li class="explain-text text-black">Division</li>
                         </ul>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                 </div>  
                 <div class="flex-col-1 center-content">
                     <div class="wrap">
-                        <p class="explain-text">Learn from your mistakes and find out where you need to improve</p>
+                        <p class="explain-text text-black">Learn from your mistakes and find out where you need to improve</p>
                     </div>
                 </div>   
                 <div class="flex-col-1 center-content">
