--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -31,7 +31,7 @@
                         </div>
                     </a>
                 </div>
-            </header> 
+            </header>
             <section id="privacy" class="center-content">
                 <div class="text-content">
                     <h2>Privacy Policy</h2>
@@ -42,7 +42,7 @@
                     <p>This game do not collect any privacy information from the users, except for the information collected by third party services.</p>
                     <p>Link to privacy policy of third party service providers used by the app </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><li><a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a></li></ul>
                     <p><strong>Log Data</strong></p>
-                    <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
+                    <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as device model, Android OS, battery level, the time and date of the error.</p>
                     <p><strong>Changes to This Privacy Policy</strong></p>
                     <p>This privacy policy may be revised from time to time. Please visit Our Privacy Policy Page frequently to stay aware of changes. Your continued use of my service will signify your acceptance of the changes to this Privacy Policy.</p>
                     <p><strong>Contact Me</strong></p>
