hosted by firebase

--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@
                 <div class="contact-text">
                     <p class="my-font-black">Developer: Gaute Meek Olsen </p>
                     <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')" href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
+                    <p class="my-font-black">Website: <a href="https://gaute.app" target="_blank">gaute.app</a></p>
                 </div>
                 <div class="contact-social">
                     <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')" href="https://play.google.com/store/apps/developer?id=Gaute+Meek+Olsen" target="_blank">
