updated phone images

--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,12 @@
                     </div>
                 </div>
                 <div class="flex-col-1 center-content mobile-hide">
-                    <img id="display-game" class="inline" src="resources/images/calcfastonphone.png" alt="Display of Calc Fast"/>
+                    <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast"/>
                 </div>
 
                 <div id="home-content-mobile">
                     <p id="download-text" class="pulse">Download today!</p>
-                    <img id="display-game" class="inline" src="resources/images/calcfastonphone.png" alt="Display of Calc Fast"/>
+                    <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast"/>
                     <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
                         <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play"/>
                     </a>
@@ -76,7 +76,7 @@
             </section>
             <section id="game">
                 <div class="flex-col-1 center-content">
-                    <img class="display-game-phone" class="inline" src="resources/images/framed_plus.png" alt="Display of Calc Fast"/>
+                    <img class="display-game-phone" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast"/>
                 </div>
                 <div class="flex-col-2 center-content">
                     <div class="wrap">
@@ -93,7 +93,7 @@
             </section>
             <section id="game-learn">
                 <div class="flex-col-1 center-content">
-                    <img class="display-game-phone" class="inline" src="resources/images/framed_info.png" alt="Display of the result from one game"/>
+                    <img class="display-game-phone" class="inline" src="resources/images/details_framed.png" alt="Display of the result from one game"/>
                 </div>  
                 <div class="flex-col-1 center-content">
                     <div class="wrap">
@@ -101,23 +101,23 @@
                     </div>
                 </div>   
                 <div class="flex-col-1 center-content">
-                    <img class="display-game-phone" class="inline" src="resources/images/framed_stats.png" alt="Display of your stats in Calc Fast"/>
+                    <img class="display-game-phone" class="inline" src="resources/images/stats_framed.png" alt="Display of your stats in Calc Fast"/>
                 </div>            
             </section>
             <section id="game-improve">
                 <div class="flex-col-1 center-content">
                     <div class="wrap">
                         <p class="explain-text text-black">Improve yourself to answer the calculations correct and faster</p>
-                        <p class="explain-text text-black">Then join you might climb the leaderboard</p>
+                        <p class="explain-text text-black">Then join you might climb the leaderboard and unlock the achievments</p>
                     </div>
                 </div>   
                 <div class="flex-col-1 center-content">
                     <div class="wrap">
-                        <img class="display-game-phone" class="inline" src="resources/images/framed_leaderboard.png" alt="Leaderboard"/>
+                        <img class="display-game-phone" class="inline" src="resources/images/leaderboard_framed.png" alt="Leaderboard"/>
                         <p class="img-txt">Public leaderboard</p>
                     </div>
                     <div class="wrap">
-                        <img class="display-game-phone" class="inline" src="resources/images/framed_highscores.png" alt="Highscore table"/>
+                        <img class="display-game-phone" class="inline" src="resources/images/highscore_framed.png" alt="Highscore table"/>
                         <p class="img-txt">Private highscoretable</p>
                     </div>
                 </div>                        
