--- a/public/index.html
+++ b/public/index.html
@@ -1,153 +1,169 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Calc Fast - Math Game</title>
-        <link rel="icon" href="resources/images/ic_launcher.png">
-        <meta name="description" content="Fun math game, where you need to think fast to solve math equations. Calc Fast is an Android game, that will present you with addition, subtraction, multiplication, and division. Try your best and make the highscore table.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="animations.css">
-        <script src="vue.min.js" defer></script>
-        <script src="main.js" defer></script>
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+<head>
+    <title>Calc Fast - Math Game</title>
+    <link rel="icon" href="resources/images/ic_launcher.png">
+    <meta name="description" content="Fun math game, where you need to think fast to solve math equations. Calc Fast is an Android game, that will present you with addition, subtraction, multiplication, and division. Try your best and make the highscore table.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="animations.css">
+    <script src="vue.min.js" defer></script>
+    <script src="main.js" defer></script>
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-104096302-1', 'auto');
         ga('send', 'pageview');
+    </script>
+</head>
 
-        </script>        
-    </head>
-    <body>
-        <div id="app">
-            <header id="top-line">
-                <div class="header-wrap">
-                    <a class="inline my-link-style" v-on:click="sendEvent('link', 'Google Play App', 'header')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                        <div class="center-content">
-                            <img class="app-icon inline" src="resources/images/ic_launcher.png" alt="Calc Fast icon" />
-                            <p class="inline header-text">Calc Fast</p>
-                        </div>
-                    </a>
-                    <div id="burger" v-on:click="showMenu()">
-                        &#9776;
+<body>
+    <div id="app">
+        <header id="top-line">
+            <div class="header-wrap">
+                <a class="inline my-link-style" v-on:click="sendEvent('link', 'Google Play App', 'header')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                    <div class="center-content">
+                        <img class="app-icon inline" src="resources/images/ic_launcher.png" alt="Calc Fast icon" />
+                        <p class="inline header-text">Calc Fast</p>
                     </div>
+                </a>
+                <div id="burger" v-on:click="showMenu()">
+                    &#9776;
                 </div>
-                <nav id="nav" class="mobile-hide">
-                    <ul id="menu-links">
-                        <li v-on:click="scrollTo('#home')" class="active" data-link="home">Home</li>
-                        <li v-on:click="scrollTo('#game')" data-link="game">Game</li>
-                        <li v-on:click="scrollTo('#download')" data-link="download">Download</li>
-                        <li v-on:click="scrollTo('#contact')" data-link="contact">Contact</li>
-                    </ul>
-                </nav>
-            </header>        
-            <section id="home" class="green-gradient">
+            </div>
+            <nav id="nav" class="mobile-hide">
+                <ul id="menu-links">
+                    <li v-on:click="scrollTo('#home')" class="active" data-link="home">Home</li>
+                    <li v-on:click="scrollTo('#game')" data-link="game">Game</li>
+                    <li v-on:click="scrollTo('#download')" data-link="download">Download</li>
+                    <li v-on:click="scrollTo('#contact')" data-link="contact">Contact</li>
+                </ul>
+            </nav>
+        </header>
+        <section id="home" class="green-gradient">
 
-                <div class="flex-col-2 center-content mobile-hide">
-                    <div class="wrap">
-                        <p id="download-text" class="pulse">Download today!</p>
-                        <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                            <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play"/>
-                        </a>
-                    </div>
-                </div>
-                <div class="flex-col-1 center-content mobile-hide">
-                    <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast"/>
-                </div>
-
-                <div id="home-content-mobile">
+            <div class="flex-col-2 center-content mobile-hide">
+                <div class="wrap">
                     <p id="download-text" class="pulse">Download today!</p>
-                    <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast"/>
                     <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                        <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play"/>
+                        <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play" />
                     </a>
                 </div>
+            </div>
+            <div class="flex-col-1 center-content mobile-hide">
+                <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast" />
+            </div>
 
-                <div id="more" class="center-content my-link-style" v-on:click="scrollTo('#game')">
-                    <div class="wrap">
-                        <p class="my-font">Discover more</p>
-                        <img src="resources/images/ic_arrow_drop_down.png" alt="Show more"/>
-                    </div>
-                </div>
+            <div id="home-content-mobile">
+                <p id="download-text" class="pulse">Download today!</p>
+                <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast" />
+                <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                    <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play" />
+                </a>
+            </div>
 
-            </section>
-            <section id="game">
-                <div class="flex-col-1 center-content">
-                    <img class="display-game-phone" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast"/>
+            <div id="more" class="center-content my-link-style" v-on:click="scrollTo('#game')">
+                <div class="wrap">
+                    <p class="my-font">Discover more</p>
+                    <img src="resources/images/ic_arrow_drop_down.png" alt="Show more" />
                 </div>
-                <div class="flex-col-2 center-content">
-                    <div class="wrap">
-                        <p class="explain-text text-black">Calc Fast is a quick and fun math game you can play on your Android phone.</p> 
-                        <p class="explain-text text-black">Solve as many math calculations you can in 60 secons!</p>
-                        <ul>
-                            <li class="explain-text text-black">Addision</li>
-                            <li class="explain-text text-black">Subtraction</li>
-                            <li class="explain-text text-black">Multiplication</li>
-                            <li class="explain-text text-black">Division</li>
-                        </ul>
-                    </div>
+            </div>
+
+        </section>
+        <section id="game">
+            <div class="flex-col-1 center-content">
+                <img class="display-game-phone" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast" />
+            </div>
+            <div class="flex-col-2 center-content">
+                <div class="wrap">
+                    <p class="explain-text text-black">Calc Fast is a quick and fun math game you can play on your Android phone.</p>
+                    <p class="explain-text text-black">Solve as many math calculations you can in 60 secons!</p>
+                    <ul>
+                        <li class="explain-text text-black">Addision</li>
+                        <li class="explain-text text-black">Subtraction</li>
+                        <li class="explain-text text-black">Multiplication</li>
+                        <li class="explain-text text-black">Division</li>
+                    </ul>
                 </div>
-            </section>
-            <section id="game-learn">
-                <div class="flex-col-1 center-content">
-                    <img class="display-game-phone" class="inline" src="resources/images/details_framed.png" alt="Display of the result from one game"/>
-                </div>  
-                <div class="flex-col-1 center-content">
-                    <div class="wrap">
-                        <p class="explain-text text-black">Learn from your mistakes and find out where you need to improve</p>
-                    </div>
-                </div>   
-                <div class="flex-col-1 center-content">
-                    <img class="display-game-phone" class="inline" src="resources/images/stats_framed.png" alt="Display of your stats in Calc Fast"/>
-                </div>            
-            </section>
-            <section id="game-improve">
-                <div class="flex-col-1 center-content">
-                    <div class="wrap">
-                        <p class="explain-text text-black">Improve yourself to answer the calculations correct and faster</p>
-                        <p class="explain-text text-black">Then join you might climb the leaderboard and unlock the achievments</p>
-                    </div>
-                </div>   
-                <div class="flex-col-1 center-content">
-                    <div class="wrap">
-                        <img class="display-game-phone" class="inline" src="resources/images/leaderboard_framed.png" alt="Leaderboard"/>
-                        <p class="img-txt">Public leaderboard</p>
-                    </div>
-                    <div class="wrap">
-                        <img class="display-game-phone" class="inline" src="resources/images/highscore_framed.png" alt="Highscore table"/>
-                        <p class="img-txt">Private highscoretable</p>
-                    </div>
-                </div>                        
-            </section>   
-            <section id="download">
-                <div class="flex-col-2 center-content">
-                    <div class="wrap">
-                        <a v-on:click="sendEvent('link', 'Google Play App', 'Link on download')" class="link-text" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">Download at Google Play</a>
-                        </br>
-                        <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on download')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                            <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play"/>
-                        </a>
-                    </div>
-                </div>              
-            </section>
-            <section id="contact">
-                <div class="contact-text">
-                    <p class="my-font-black">Developer: Gaute Meek Olsen </p>
-                    <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')" href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
-                    <p class="my-font-black">Website: <a href="https://gaute.app" target="_blank">gaute.app</a></p>
+            </div>
+        </section>
+        <section id="game-learn">
+            <div class="flex-col-1 center-content">
+                <img class="display-game-phone" class="inline" src="resources/images/details_framed.png" alt="Display of the result from one game" />
+            </div>
+            <div class="flex-col-1 center-content">
+                <div class="wrap">
+                    <p class="explain-text text-black">Learn from your mistakes and find out where you need to improve</p>
                 </div>
-                <div class="contact-social">
-                    <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')" href="https://play.google.com/store/apps/developer?id=Gaute+Meek+Olsen" target="_blank">
-                        <div class="social-circle center-content"><img class="social-image" src="resources/images/play.png" alt="Google Play developer, Gaute Meek Olsen"/></div>
-                    </a>
-                    <a v-on:click="sendEvent('link', 'Twitter', 'contact')" href="https://twitter.com/GauteMeekOlsen" target="_blank">
-                        <div class="social-circle center-content"><img class="social-image" src="resources/images/logo-twitter.svg" alt="Follow Gaute Meek Olsen on Twitter"/></div>
+            </div>
+            <div class="flex-col-1 center-content">
+                <img class="display-game-phone" class="inline" src="resources/images/stats_framed.png" alt="Display of your stats in Calc Fast" />
+            </div>
+        </section>
+        <section id="game-improve">
+            <div class="flex-col-1 center-content">
+                <div class="wrap">
+                    <p class="explain-text text-black">Improve yourself to answer the calculations correct and faster</p>
+                    <p class="explain-text text-black">Then join you might climb the leaderboard and unlock the achievments</p>
+                </div>
+            </div>
+            <div class="flex-col-1 center-content">
+                <div class="wrap">
+                    <img class="display-game-phone" class="inline" src="resources/images/leaderboard_framed.png" alt="Leaderboard" />
+                    <p class="img-txt">Public leaderboard</p>
+                </div>
+                <div class="wrap">
+                    <img class="display-game-phone" class="inline" src="resources/images/highscore_framed.png" alt="Highscore table" />
+                    <p class="img-txt">Private highscoretable</p>
+                </div>
+            </div>
+        </section>
+        <section id="download">
+            <div class="flex-col-2 center-content">
+                <div class="wrap">
+                    <a v-on:click="sendEvent('link', 'Google Play App', 'Link on download')" class="link-text" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">Download at Google Play</a>
+                    </br>
+                    <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on download')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                        <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play" />
                     </a>
                 </div>
-            </section>                   
-        </div>
-    </body>
+            </div>
+        </section>
+        <section id="aod">
+            <div class="flex-col-1">
+                <div class="wrap">
+                    <p class="link-text">Check out Calc Fast, <a href="https://appoftheday.downloadastro.com/app/calc-fast/" target="blank">App of the Day interview on DownloadAstro</a></p>
+                </div>
+            </div>
+        </section>
+        <section id="contact">
+            <div class="contact-text">
+                <p class="my-font-black">Developer: Gaute Meek Olsen </p>
+                <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')" href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
+                <p class="my-font-black">Website: <a href="https://gaute.app" target="_blank">gaute.app</a></p>
+            </div>
+            <div class="contact-social">
+                <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')" href="https://play.google.com/store/apps/developer?id=Gaute+Meek+Olsen" target="_blank">
+                    <div class="social-circle center-content"><img class="social-image" src="resources/images/play.png" alt="Google Play developer, Gaute Meek Olsen" /></div>
+                </a>
+                <a v-on:click="sendEvent('link', 'Twitter', 'contact')" href="https://twitter.com/GauteMeekOlsen" target="_blank">
+                    <div class="social-circle center-content"><img class="social-image" src="resources/images/logo-twitter.svg" alt="Follow Gaute Meek Olsen on Twitter" /></div>
+                </a>
+            </div>
+        </section>
+    </div>
+</body>
+
 </html>
