removed last commit

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>Calc Fast - Math Game</title>
     <link rel="icon" href="resources/images/ic_launcher.png">
-    <meta name="description" content="Fun math game, where you need to think fast to solve math equations. Calc Fast is an Android game, that will present you with addition, subtraction, multiplication, and division. Try your best and make the highscore table.">
+    <meta name="description"
+        content="Fun math game, where you need to think fast to solve math equations. Calc Fast is an Android game, that will present you with addition, subtraction, multiplication, and division. Try your best and make the highscore table.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -33,7 +34,8 @@
     <div id="app">
         <header id="top-line">
             <div class="header-wrap">
-                <a class="inline my-link-style" v-on:click="sendEvent('link', 'Google Play App', 'header')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                <a class="inline my-link-style" v-on:click="sendEvent('link', 'Google Play App', 'header')"
+                    href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
                     <div class="center-content">
                         <img class="app-icon inline" src="resources/images/ic_launcher.png" alt="Calc Fast icon" />
                         <p class="inline header-text">Calc Fast</p>
@@ -57,20 +59,26 @@
             <div class="flex-col-2 center-content mobile-hide">
                 <div class="wrap">
                     <p id="download-text" class="pulse">Download today!</p>
-                    <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                        <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play" />
+                    <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')"
+                        href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                        <img class="download-badge" src="resources/images/google-play-badge.png"
+                            alt="Get it on Google Play" />
                     </a>
                 </div>
             </div>
             <div class="flex-col-1 center-content mobile-hide">
-                <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast" />
+                <img id="display-game" class="inline" src="resources/images/pxl2_framed.png"
+                    alt="Display of Calc Fast" />
             </div>
 
             <div id="home-content-mobile">
                 <p id="download-text" class="pulse">Download today!</p>
-                <img id="display-game" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast" />
-                <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                    <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play" />
+                <img id="display-game" class="inline" src="resources/images/pxl2_framed.png"
+                    alt="Display of Calc Fast" />
+                <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on home')"
+                    href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                    <img class="download-badge" src="resources/images/google-play-badge.png"
+                        alt="Get it on Google Play" />
                 </a>
             </div>
 
@@ -84,11 +92,13 @@
         </section>
         <section id="game">
             <div class="flex-col-1 center-content">
-                <img class="display-game-phone" class="inline" src="resources/images/pxl2_framed.png" alt="Display of Calc Fast" />
+                <img class="display-game-phone" class="inline" src="resources/images/pxl2_framed.png"
+                    alt="Display of Calc Fast" />
             </div>
             <div class="flex-col-2 center-content">
                 <div class="wrap">
-                    <p class="explain-text text-black">Calc Fast is a quick and fun math game you can play on your Android phone.</p>
+                    <p class="explain-text text-black">Calc Fast is a quick and fun math game you can play on your
+                        Android phone.</p>
                     <p class="explain-text text-black">Solve as many math calculations you can in 60 secons!</p>
                     <ul>
                         <li class="explain-text text-black">Addision</li>
@@ -101,31 +111,38 @@
         </section>
         <section id="game-learn">
             <div class="flex-col-1 center-content">
-                <img class="display-game-phone" class="inline" src="resources/images/details_framed.png" alt="Display of the result from one game" />
+                <img class="display-game-phone" class="inline" src="resources/images/details_framed.png"
+                    alt="Display of the result from one game" />
             </div>
             <div class="flex-col-1 center-content">
                 <div class="wrap">
-                    <p class="explain-text text-black">Learn from your mistakes and find out where you need to improve</p>
+                    <p class="explain-text text-black">Learn from your mistakes and find out where you need to improve
+                    </p>
                 </div>
             </div>
             <div class="flex-col-1 center-content">
-                <img class="display-game-phone" class="inline" src="resources/images/stats_framed.png" alt="Display of your stats in Calc Fast" />
+                <img class="display-game-phone" class="inline" src="resources/images/stats_framed.png"
+                    alt="Display of your stats in Calc Fast" />
             </div>
         </section>
         <section id="game-improve">
             <div class="flex-col-1 center-content">
                 <div class="wrap">
-                    <p class="explain-text text-black">Improve yourself to answer the calculations correct and faster</p>
-                    <p class="explain-text text-black">Then join you might climb the leaderboard and unlock the achievments</p>
+                    <p class="explain-text text-black">Improve yourself to answer the calculations correct and faster
+                    </p>
+                    <p class="explain-text text-black">Then join you might climb the leaderboard and unlock the
+                        achievments</p>
                 </div>
             </div>
             <div class="flex-col-1 center-content">
                 <div class="wrap">
-                    <img class="display-game-phone" class="inline" src="resources/images/leaderboard_framed.png" alt="Leaderboard" />
+                    <img class="display-game-phone" class="inline" src="resources/images/leaderboard_framed.png"
+                        alt="Leaderboard" />
                     <p class="img-txt">Public leaderboard</p>
                 </div>
                 <div class="wrap">
-                    <img class="display-game-phone" class="inline" src="resources/images/highscore_framed.png" alt="Highscore table" />
+                    <img class="display-game-phone" class="inline" src="resources/images/highscore_framed.png"
+                        alt="Highscore table" />
                     <p class="img-txt">Private highscoretable</p>
                 </div>
             </div>
@@ -133,33 +150,35 @@
         <section id="download">
             <div class="flex-col-2 center-content">
                 <div class="wrap">
-                    <a v-on:click="sendEvent('link', 'Google Play App', 'Link on download')" class="link-text" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">Download at Google Play</a>
+                    <a v-on:click="sendEvent('link', 'Google Play App', 'Link on download')" class="link-text"
+                        href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast"
+                        target="_blank">Download at Google Play</a>
                     </br>
-                    <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on download')" href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
-                        <img class="download-badge" src="resources/images/google-play-badge.png" alt="Get it on Google Play" />
+                    <a v-on:click="sendEvent('link', 'Google Play App', 'Badge on download')"
+                        href="https://play.google.com/store/apps/details?id=gautemo.game.calcfast" target="_blank">
+                        <img class="download-badge" src="resources/images/google-play-badge.png"
+                            alt="Get it on Google Play" />
                     </a>
-                </div>
-            </div>
-        </section>
-        <section id="aod">
-            <div class="flex-col-1">
-                <div class="wrap">
-                    <p class="link-text">Check out Calc Fast, <a href="https://appoftheday.downloadastro.com/app/calc-fast/" target="blank">App of the Day interview on DownloadAstro</a></p>
                 </div>
             </div>
         </section>
         <section id="contact">
             <div class="contact-text">
                 <p class="my-font-black">Developer: Gaute Meek Olsen </p>
-                <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')" href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
+                <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')"
+                        href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
                 <p class="my-font-black">Website: <a href="https://gaute.app" target="_blank">gaute.app</a></p>
             </div>
             <div class="contact-social">
-                <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')" href="https://play.google.com/store/apps/developer?id=Gaute+Meek+Olsen" target="_blank">
-                    <div class="social-circle center-content"><img class="social-image" src="resources/images/play.png" alt="Google Play developer, Gaute Meek Olsen" /></div>
+                <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')"
+                    href="https://play.google.com/store/apps/developer?id=Gaute+Meek+Olsen" target="_blank">
+                    <div class="social-circle center-content"><img class="social-image" src="resources/images/play.png"
+                            alt="Google Play developer, Gaute Meek Olsen" /></div>
                 </a>
-                <a v-on:click="sendEvent('link', 'Twitter', 'contact')" href="https://twitter.com/GauteMeekOlsen" target="_blank">
-                    <div class="social-circle center-content"><img class="social-image" src="resources/images/logo-twitter.svg" alt="Follow Gaute Meek Olsen on Twitter" /></div>
+                <a v-on:click="sendEvent('link', 'Twitter', 'contact')" href="https://twitter.com/GauteMeekOlsen"
+                    target="_blank">
+                    <div class="social-circle center-content"><img class="social-image"
+                            src="resources/images/logo-twitter.svg" alt="Follow Gaute Meek Olsen on Twitter" /></div>
                 </a>
             </div>
         </section>
