fixed logo url in privacy policy and changed from gaute.app to gaute.dev

--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
                 <p class="my-font-black">Developer: Gaute Meek Olsen </p>
                 <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')"
                         href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
-                <p class="my-font-black">Website: <a href="https://gaute.app" target="_blank">gaute.app</a></p>
+                <p class="my-font-black">Website: <a href="https://gaute.dev" target="_blank">gaute.dev</a></p>
             </div>
             <div class="contact-social">
                 <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')"
