--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -24,7 +24,7 @@
         <div id="app">
             <header id="top-line">
                 <div class="header-wrap">
-                    <a class="inline my-link-style" href="http://calcfast.com">
+                    <a class="inline my-link-style" href="./">
                         <div class="center-content">
                             <img class="app-icon inline" src="resources/images/ic_launcher.png" alt="Calc Fast icon" />
                             <p class="inline header-text">Calc Fast</p>
@@ -53,7 +53,7 @@
                 <div class="contact-text">
                     <p class="my-font-black">Developer: Gaute Meek Olsen </p>
                     <p class="my-font-black">Email: <a v-on:click="sendEvent('link', 'Email', 'contact')" href="mailto:gautedevelopment@gmail.com">gautedevelopment@gmail.com</a></p>
-                    <p class="my-font-black">Website: <a href="https://gaute.app" target="_blank">gaute.app</a></p>
+                    <p class="my-font-black">Website: <a href="https://gaute.dev" target="_blank">gaute.dev</a></p>
                 </div>
                 <div class="contact-social">
                     <a v-on:click="sendEvent('link', 'Google Play developer', 'contact')" href="https://play.google.com/store/apps/developer?id=Gaute+Meek+Olsen" target="_blank">
